Too long titles fixed

--- a/src/pages/Home/custom.scss
+++ b/src/pages/Home/custom.scss
@@ -98,6 +98,7 @@
     display: flex;
     gap: 2rem;
     flex-direction: column;
+    word-break: break-all;
   }
 }
 
